Refactoring using dependency injection for Executor service and deporting the waint for resut to the end of all treatements