@@ -6,8 +6,8 @@ import org.jsoup.select.Elements;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -23,7 +23,7 @@ public class LinksDetector{
     public static List<String>[] detect(Document document ,String Domaine) {
         Elements elements = document.select("a");
         //links[0]= liste de liens internes et links[1]= liste de liens externes
-        List<String> links[] = new ArrayList[2];
+        ArrayList[] links = new ArrayList[2];
 
         // Initialisation de chaque éléments du tableau
         links[0] = new ArrayList<>();
@@ -32,12 +32,12 @@ public class LinksDetector{
         for (Element element : elements){
             try {
 //                log.info(element.absUrl("href"));
-                URL href = new URL(element.absUrl("href"));
+                URI href = new URI(element.absUrl("href"));
                 if(href.getAuthority()!= null && href.getAuthority().equals(Domaine))
                     links[0].add(element.absUrl("href"));
                 else
                     links[1].add(element.absUrl("href"));
-            } catch (MalformedURLException e) {
+            } catch (URISyntaxException e) {
                 log.error(e.getMessage());
             }
         }
